apps/00-infra/crowdsec/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: crowdsec
  labels:
    goldilocks.fairwinds.com/enabled: "true"
    app.kubernetes.io/name: crowdsec
    app.kubernetes.io/part-of: vixens-security
    # privileged: agent DaemonSet requires hostPath /var/log to read node logs
    pod-security.kubernetes.io/enforce: privileged
